--- a/emovies.website/emovies.website.csproj
+++ b/emovies.website/emovies.website.csproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="Data\CustomerInfo.cs" />
     <Compile Include="Data\Movie.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="confirmation.aspx.cs">
@@ -157,6 +158,7 @@
       <DependentUpon>confirmation.aspx</DependentUpon>
     </Compile>
     <Compile Include="Data\MovieRepository.cs" />
+    <Compile Include="Data\OrderMade.cs" />
     <Compile Include="order.aspx.cs">
       <DependentUpon>order.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
