--- a/emovies.website/emovies.website.csproj
+++ b/emovies.website/emovies.website.csproj
@@ -158,6 +158,7 @@
       <DependentUpon>confirmation.aspx</DependentUpon>
     </Compile>
     <Compile Include="Data\MovieRepository.cs" />
+    <Compile Include="Data\ListExtensions.cs" />
     <Compile Include="Data\OrderMade.cs" />
     <Compile Include="order.aspx.cs">
       <DependentUpon>order.aspx</DependentUpon>
