--- a/emovies.website/Web.config
+++ b/emovies.website/Web.config
@@ -13,7 +13,7 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt"/>
-        <add tagPrefix="UserControl" src ="~/Controls/UserTextInputControl.ascx" tagName="TextInput"/>
+        <add tagPrefix="ValidatedInput" src ="~/Controls/UserTextInputControl.ascx" tagName="Text"/>
       </controls>
     </pages>
   </system.web>
