--- a/emovies.website/emovies.website.csproj
+++ b/emovies.website/emovies.website.csproj
@@ -155,21 +155,15 @@
     <Compile Include="Controls\UserTextInputControl.ascx.designer.cs">
       <DependentUpon>UserTextInputControl.ascx</DependentUpon>
     </Compile>
-    <Compile Include="Data\CustomerCommandParameterAdder.cs" />
-    <Compile Include="Data\CustomerOrderWriter.cs" />
-    <Compile Include="Data\CustomerWriter.cs" />
     <Compile Include="Data\DataStager.cs" />
     <Compile Include="Data\DBWriter.cs" />
     <Compile Include="Data\DataStagedForDBWrite.cs" />
-    <Compile Include="Data\CollectionToListMapper.cs" />
     <Compile Include="Data\CustomerMapper.cs" />
     <Compile Include="Data\CustomerOrderMapper.cs" />
     <Compile Include="Data\ListMoviesOrderedMapper.cs" />
-    <Compile Include="Data\ListOfMoviesOrderedGenerator.cs" />
-    <Compile Include="Data\MovieOrderMapper.cs" />
+    <Compile Include="Data\ListOfMovieOrderGenerator.cs" />
     <Compile Include="Data\CustomerOrder.cs" />
-    <Compile Include="Data\MovieOrderWriter.cs" />
-    <Compile Include="Data\OrderCommandParameterAdder.cs" />
+    <Compile Include="Data\PresentationOrderLine.cs" />
     <Compile Include="Data\ProtectedCardNumber.cs" />
     <Compile Include="Data\Customer.cs" />
     <Compile Include="Data\Movie.cs" />
@@ -184,6 +178,7 @@
     <Compile Include="Data\MovieRepository.cs" />
     <Compile Include="Data\ListExtensions.cs" />
     <Compile Include="Data\MovieOrder.cs" />
+    <Compile Include="Data\QuantityReader.cs" />
     <Compile Include="order.aspx.cs">
       <DependentUpon>order.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
