--- a/emovies.website/emovies.website.csproj
+++ b/emovies.website/emovies.website.csproj
@@ -159,7 +159,7 @@
       <DependentUpon>UserTextInputControl.ascx</DependentUpon>
     </Compile>
     <Compile Include="Data\Mediator.cs" />
-    <Compile Include="Data\OrderLinesWriter.cs" />
+    <Compile Include="Data\OrderLineWriter.cs" />
     <Compile Include="Data\OrderWriter.cs" />
     <Compile Include="Data\TableWriter.cs" />
     <Compile Include="Data\CustomerWriter.cs" />
@@ -192,6 +192,8 @@
     <Compile Include="Data\OrderLine.cs" />
     <Compile Include="Data\QuantityReader.cs" />
     <Compile Include="Data\TotalMapper.cs" />
+    <Compile Include="Data\WriteMachineBuilder.cs" />
+    <Compile Include="Data\WriteMachine.cs" />
     <Compile Include="order.aspx.cs">
       <DependentUpon>order.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
